some game buttons (not designed and not working X)))

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,6 +27,15 @@ html {
     width: 200px;
 }
 
+.HiringButton {
+    display: block;
+    background-color: #fc0707;
+    /*border-color: #337ab7; */
+    margin: auto;
+    width: 100px;
+
+}
+
 .loginButton {
     display: block;
     background-color: #337ab7;
