--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,24 +17,29 @@ html {
 }
 
 .HiringButton1{
-	    position: absolute;
-	    z-index: 1;
-	    top: 0px;
-	    left: 50%;
-		background-color: #fc0707;
-		margin: auto;
-		width: 100px;
+    position: absolute;
+    z-index: 1;
+    top: 0px;
+    background-image: url("2.png");
+    margin-top:500px;
+    margin-left:10px;
+    width: 80px;
+    height: 92px;
+
 }
 
 .HiringButton2{
-	    position: absolute;
-	    z-index: 1;
-	    top: 30px;
-	    left: 50%;
-		background-color: #fc0707;
-		margin: auto;
-		width: 100px;
+    position: absolute;
+    z-index: 1;
+    top: 0px;
+    left: 100px;
+    background-image: url("1.png");
+    margin-top:500px;
+    margin-left:10px;
+    width: 80px;
+    height: 92px;
 }
+
 
 .divform {
     width: 300px;
