--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,11 +20,11 @@ html {
     position: absolute;
     z-index: 1;
     top: 0px;
-    background-image: url("2.png");
+    background-image: url("bone.png");
     margin-top:480px;
     margin-left:10px;
     width: 80px;
-    height: 122px;
+    height: 118px;
 
 }
 
@@ -37,7 +37,30 @@ html {
     margin-top:480px;
     margin-left:10px;
     width: 80px;
-    height: 122px;
+    height: 118px;
+}
+.HiringButton1:hover{
+    position: absolute;
+    z-index: 1;
+    top: 0px;
+    background-image: url("boneHover.png");
+    margin-top:480px;
+    margin-left:10px;
+    width: 80px;
+    height: 118px;
+
+}
+
+.HiringButton2:hover{
+    position: absolute;
+    z-index: 1;
+    top: 0px;
+    left: 100px;
+    background-image: url("1Hover.png");
+    margin-top:480px;
+    margin-left:10px;
+    width: 80px;
+    height: 118px;
 }
 
 
