--- a/public/css/main.css
+++ b/public/css/main.css
@@ -98,7 +98,7 @@ html {
     display: block;
     background-color: #337ab7;
     border-color: #337ab7;
-    margin: auto;
+    margin: 10px auto;
     width: 200px;
 }
 
