--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,13 +1,11 @@
 body {
-/* box-sizing: border-box; */
+    /* box-sizing: border-box; */
     height: 100%;
     width: 100%;
     margin: 0;
-
 }
 
-canvas {
-}
+canvas {}
 
 html {
     box-sizing: border-box;
@@ -16,55 +14,53 @@ html {
     width: 100%;
 }
 
-.HiringButton1{
+.HiringButton1 {
     position: absolute;
     z-index: 1;
     top: 0px;
-	left: 0px;
+    left: 0px;
     background-image: url("bone.png");
-    margin-top:480px;
-    margin-left:10px;
+    margin-top: 480px;
+    margin-left: 10px;
     width: 80px;
     height: 118px;
-
 }
 
-.HiringButton2{
+.HiringButton2 {
     position: absolute;
     z-index: 1;
     top: 0px;
     left: 100px;
     background-image: url("1.png");
-    margin-top:480px;
-    margin-left:10px;
+    margin-top: 480px;
+    margin-left: 10px;
     width: 80px;
     height: 118px;
 }
-.HiringButton1:hover{
+
+.HiringButton1:hover {
     position: absolute;
     z-index: 1;
     top: 0px;
-	left: 0px;
+    left: 0px;
     background-image: url("boneHover.png");
-    margin-top:480px;
-    margin-left:10px;
+    margin-top: 480px;
+    margin-left: 10px;
     width: 80px;
     height: 118px;
-
 }
 
-.HiringButton2:hover{
+.HiringButton2:hover {
     position: absolute;
     z-index: 1;
     top: 0px;
     left: 100px;
     background-image: url("1Hover.png");
-    margin-top:480px;
-    margin-left:10px;
+    margin-top: 480px;
+    margin-left: 10px;
     width: 80px;
     height: 118px;
 }
-
 
 .divform {
     width: 300px;
@@ -76,7 +72,6 @@ html {
     display: block;
     width: 200px;
 }
-
 
 .loginButton {
     display: block;
@@ -109,7 +104,8 @@ html {
     border-color: #337ab7;
     margin: auto;
 }
-.mainLoginButton{
+
+.mainLoginButton {
     display: block;
     width: 300px;
     background-color: #337ab7;
@@ -117,13 +113,12 @@ html {
     margin: 300px auto 25px;
 }
 
-.mainRegistrationButton{
+.mainRegistrationButton {
     display: block;
     width: 300px;
     background-color: #337ab7;
     border-color: #337ab7;
     margin: auto;
-
 }
 
 .title {
@@ -142,12 +137,13 @@ html {
 }
 
 .bg {
-    background-image: url("I0gR3jSB7OE.jpg");
-    background-size: 100%;
-    width: 1000px;
-    height: 650px;
-    margin: 0 auto;
-    padding-top: 40px;
+    background: url(I0gR3jSB7OE.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .gamebg {
@@ -163,7 +159,7 @@ html {
 }
 
 .pink {
-	color: #fff;
+    color: #fff;
 }
 
 .cssload-wrap {
