--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,6 +14,10 @@ html {
     width: 100%;
 }
 
+.js-menu{
+    padding-top: 200px;
+}
+
 .HiringButton1 {
     position: absolute;
     z-index: 1;
@@ -24,6 +28,7 @@ html {
     margin-left: 10px;
     width: 80px;
     height: 118px;
+
 }
 
 .HiringButton2 {
@@ -144,6 +149,7 @@ html {
     background-size: cover;
     width: 100%;
     height: 100%;
+        padding-top: 1px;
 }
 
 .gamebg {
