--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,15 @@ body {
     margin: 0;
 }
 
+.table{
+    border: 1 
+    cellspacing: 0 
+    cellpadding: 2
+    align: center
+    width: 2000px
+    color = #8B0000
+}
+
 .js-canvas{
 	position: absolute;
     left: 0px;
