--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,8 +8,8 @@ body {
 .table{
     width: 500px !important;
     color: #8B0000 !important;
-    background-color: #FFFFFF 
-    opacity: 0.5;
+    background-color: #FFFFFF !important;
+    opacity: 0.5 !important;
 }
 
 .js-canvas{
