--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,6 +10,11 @@ body {
     color: #FF0000 !important;
     background-color: #FFFFFF !important;
     opacity: 0.8 !important;
+    
+}
+
+.table td{
+    padding-left: 20px !important;
 }
 
 .js-canvas{
