--- a/public/css/main.css
+++ b/public/css/main.css
@@ -87,7 +87,7 @@ html {
     z-index: 1;
     top: 0px;
     left: 0px;
-    background-image: url("arrow.png");
+    background-image: url("flag.png");
     margin-top: 0px;
     margin-left: 10px;
     width: 80px;
@@ -100,7 +100,7 @@ html {
     z-index: 1;
     top: 0px;
     left: 0px;
-    background-image: url("arrow.png");
+    background-image: url("flag.png");
     margin-top: 0px;
     margin-left: 10px;
     width: 80px;
