--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,16 @@ body {
     margin: 0;
 }
 
+.errorMessage {
+  padding: 15px;
+  border: 1px solid #d6e9c6;
+  border-radius: 4px;
+  color: #F50017;
+  background-color: #dff0d8;
+width: 300px;
+position: center;
+}
+
 .profileTable{
 	width: 100px !important;
     color: #FF0000 !important;
