--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,13 +17,23 @@ text-align: center;
 }
 
 .profileTable{
-	width: 100px !important;
-    color: #FF0000 !important;
-    background-color: #FFFFFF !important;
-    opacity: 0.8 !important;
-	position: absolute;
-	right: 200px;
-	top: 30px;
+    width: 318px !important;
+    color: #FFFFFF !important;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    background-image: url("imgonline-com-ua-piconpic-wLAtSo0hRkJy.jpg");
+    border-radius: 3px;
+    padding-top: 5px;
+    height: 200px;
+    padding-bottom: 10px;
+}
+.profileTable td{
+    border-bottom: 0px;
+    text-align: center;
+    padding-bottom: 3px;
+    padding-top: 0px;
+    font-family: Monaco;
 }
 
 .table{
